#114 Testing Refactoring: Tests aufgrund Basis Testdaten - implemented test data factories and rewrote test to use test data factory