@@ -1,12 +1,9 @@
 package ch.fortylove.persistence.service;
 
-import ch.fortylove.BaseDataTest;
 import ch.fortylove.SpringTest;
 import ch.fortylove.persistence.entity.Booking;
+import ch.fortylove.persistence.entity.BookingSettings;
 import ch.fortylove.persistence.entity.Court;
-import ch.fortylove.persistence.entity.PlayerStatus;
-import ch.fortylove.persistence.entity.Privilege;
-import ch.fortylove.persistence.entity.Role;
 import ch.fortylove.persistence.entity.Timeslot;
 import ch.fortylove.persistence.entity.User;
 import ch.fortylove.persistence.error.DuplicateRecordException;
@@ -17,64 +14,43 @@ import org.springframework.beans.factory.annotation.Autowired;
 
 import javax.annotation.Nonnull;
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 @SpringTest
-class TestBookingServiceImpl extends BaseDataTest {
-
-    @Autowired private PrivilegeService privilegeService;
-    @Autowired private RoleService roleService;
-    @Autowired private UserService userService;
-    @Autowired private CourtService courtService;
-    @Autowired private BookingSettingsService bookingSettingsService;
-    @Autowired private PlayerStatusService playerStatusService;
+class TestBookingServiceImpl extends ServiceTest {
 
     @Nonnull private List<Timeslot> timeslots;
 
     @Autowired private BookingService testee;
 
+    @Nonnull private Court court;
+    @Nonnull private User owner;
+    @Nonnull private User opponent;
+    @Nonnull private BookingSettings bookingSettings;
+
     @BeforeEach
     void setUp() {
-        timeslots = bookingSettingsService.getBookingSettings().getTimeslots();
-    }
-
-    @Test
-    public void testFindAllByCourtId_emptyRepository() {
-        final List<Booking> bookings = testee.findAllByCourtId(1L);
-
-        Assertions.assertTrue(bookings.isEmpty());
+        court = getTestDataFactory().getCourtDataFactory().getDefault();
+        owner = getTestDataFactory().getUserDataFactory().createUser("owner@fortylove.ch");
+        opponent = getTestDataFactory().getUserDataFactory().createUser("opponent@fortylove.ch");
+        bookingSettings = getTestDataFactory().getBookingSettingsDataFactory().getDefault();
     }
 
     @Test
     public void testCreate() {
-        final Privilege privilege1 = privilegeService.create(new Privilege("privilegeName1"));
-        final Privilege privilege2 = privilegeService.create(new Privilege("privilegeName2"));
-        final Role role1 = roleService.create(new Role("roleName1", List.of(privilege1)));
-        final Role role2 = roleService.create(new Role("roleName2", List.of(privilege2)));
-        final PlayerStatus playerStatus = playerStatusService.create(new PlayerStatus("aktiv", 1, 1));
-        final User user1 = userService.create(new User("firstName1", "lastName1", "email1@fortylove.ch", "password1", true, Arrays.asList(role1, role2), playerStatus));
-        final User user2 = userService.create(new User("firstName2", "lastName2", "email2@fortylove.ch", "password2", true, Arrays.asList(role1, role2), playerStatus));
-        final Court court = courtService.create(new Court());
-        final Booking booking = new Booking(court, user1, List.of(user2), timeslots.get(0), LocalDate.now());
+        final Booking booking = new Booking(court, owner, List.of(opponent), bookingSettings.getTimeslots().get(0), LocalDate.now());
 
         final Booking createdBooking = testee.create(booking);
 
-        Assertions.assertFalse(testee.findById(createdBooking.getId()).isEmpty());
-        Assertions.assertEquals(createdBooking, testee.findById(createdBooking.getId()).get());
+        final Optional<Booking> foundBooking = testee.findById(createdBooking.getId());
+        Assertions.assertFalse(foundBooking.isEmpty());
+        Assertions.assertEquals(createdBooking, foundBooking.get());
     }
 
     @Test
     public void testCreate_duplicateRecordException() {
-        final Privilege privilege1 = privilegeService.create(new Privilege("privilegeName1"));
-        final Privilege privilege2 = privilegeService.create(new Privilege("privilegeName2"));
-        final Role role1 = roleService.create(new Role("roleName1", List.of(privilege1)));
-        final Role role2 = roleService.create(new Role("roleName2", List.of(privilege2)));
-        final PlayerStatus playerStatus = playerStatusService.create(new PlayerStatus("aktiv", 1, 1));
-        final User user1 = userService.create(new User("firstName1", "lastName1", "email1@fortylove.ch", "password1", true, Arrays.asList(role1, role2), playerStatus));
-        final User user2 = userService.create(new User("firstName2", "lastName2", "email2@fortylove.ch", "password2", true, Arrays.asList(role1, role2), playerStatus));
-        final Court court = courtService.create(new Court());
-        final Booking booking = new Booking(court, user1, List.of(user2), timeslots.get(0), LocalDate.now());
+        final Booking booking = new Booking(court, owner, List.of(opponent), bookingSettings.getTimeslots().get(0), LocalDate.now());
         testee.create(booking);
 
         Assertions.assertThrows(DuplicateRecordException.class, () -> testee.create(booking));
@@ -82,46 +58,32 @@ class TestBookingServiceImpl extends BaseDataTest {
 
     @Test
     public void testFindAllByCourtId_exists() {
-        final Privilege privilege1 = privilegeService.create(new Privilege("privilegeName1"));
-        final Privilege privilege2 = privilegeService.create(new Privilege("privilegeName2"));
-        final Role role1 = roleService.create(new Role("roleName1", List.of(privilege1)));
-        final Role role2 = roleService.create(new Role("roleName2", List.of(privilege2)));
-        final PlayerStatus playerStatus = playerStatusService.create(new PlayerStatus("aktiv", 1, 1));
-        final User user1 = userService.create(new User("firstName1", "lastName1", "email1@fortylove.ch", "password1", true, Arrays.asList(role1, role2), playerStatus));
-        final User user2 = userService.create(new User("firstName2", "lastName2", "email2@fortylove.ch", "password2", true, Arrays.asList(role1, role2), playerStatus));
-        final Court court1 = courtService.create(new Court());
-        final Court court2 = courtService.create(new Court());
-        final Booking booking1 = testee.create(new Booking(court1, user1, List.of(user2), timeslots.get(0), LocalDate.now()));
-        final Booking booking2 = testee.create(new Booking(court2, user1, List.of(user2), timeslots.get(1), LocalDate.now().plusDays(1)));
-        final Booking booking3 = testee.create(new Booking(court2, user1, List.of(user2), timeslots.get(2), LocalDate.now().plusDays(2)));
+        final Court court1 = getTestDataFactory().getCourtDataFactory().createCourt();
+        final Court court2 = getTestDataFactory().getCourtDataFactory().createCourt();
+        final Booking booking1 = testee.create(new Booking(court1, owner, List.of(opponent), bookingSettings.getTimeslots().get(0), LocalDate.now()));
+        final Booking booking2 = testee.create(new Booking(court2, owner, List.of(opponent), bookingSettings.getTimeslots().get(1), LocalDate.now().plusDays(1)));
+        final Booking booking3 = testee.create(new Booking(court2, owner, List.of(opponent), bookingSettings.getTimeslots().get(2), LocalDate.now().plusDays(2)));
 
-        final List<Booking> bookings = testee.findAllByCourtId(court2.getId());
+        final List<Booking> foundBookings = testee.findAllByCourtId(court2.getId());
 
         Assertions.assertAll(
-                () -> Assertions.assertFalse(bookings.contains(booking1)),
-                () -> Assertions.assertTrue(bookings.contains(booking2)),
-                () -> Assertions.assertTrue(bookings.contains(booking3))
+                () -> Assertions.assertFalse(foundBookings.contains(booking1)),
+                () -> Assertions.assertTrue(foundBookings.contains(booking2)),
+                () -> Assertions.assertTrue(foundBookings.contains(booking3))
         );
     }
 
     @Test
     public void testFindAllByCourtId_notExist() {
-        final Privilege privilege1 = privilegeService.create(new Privilege("privilegeName1"));
-        final Privilege privilege2 = privilegeService.create(new Privilege("privilegeName2"));
-        final Role role1 = roleService.create(new Role("roleName1", List.of(privilege1)));
-        final Role role2 = roleService.create(new Role("roleName2", List.of(privilege2)));
-        final PlayerStatus playerStatus = playerStatusService.create(new PlayerStatus("aktiv", 1, 1));
-        final User user1 = userService.create(new User("firstName1", "lastName1", "email1@fortylove.ch", "password1", true, Arrays.asList(role1, role2), playerStatus));
-        final User user2 = userService.create(new User("firstName2", "lastName2", "email2@fortylove.ch", "password2", true, Arrays.asList(role1, role2), playerStatus));
-        final Court court1 = courtService.create(new Court());
-        final Court court2 = courtService.create(new Court());
-        final Court court3 = courtService.create(new Court());
-        testee.create(new Booking(court1, user1, List.of(user2), timeslots.get(0), LocalDate.now()));
-        testee.create(new Booking(court2, user1, List.of(user2), timeslots.get(1), LocalDate.now().plusDays(1)));
-        testee.create(new Booking(court2, user1, List.of(user2), timeslots.get(2), LocalDate.now().plusDays(2)));
+        final Court court1 = getTestDataFactory().getCourtDataFactory().createCourt();
+        final Court court2 = getTestDataFactory().getCourtDataFactory().createCourt();
+        final Court court3 = getTestDataFactory().getCourtDataFactory().createCourt();
+        testee.create(new Booking(court1, owner, List.of(opponent), bookingSettings.getTimeslots().get(0), LocalDate.now()));
+        testee.create(new Booking(court2, owner, List.of(opponent), bookingSettings.getTimeslots().get(1), LocalDate.now().plusDays(1)));
+        testee.create(new Booking(court2, owner, List.of(opponent), bookingSettings.getTimeslots().get(2), LocalDate.now().plusDays(2)));
 
-        final List<Booking> bookings = testee.findAllByCourtId(court3.getId());
+        final List<Booking> foundBookings = testee.findAllByCourtId(court3.getId());
 
-        Assertions.assertTrue(bookings.isEmpty());
+        Assertions.assertTrue(foundBookings.isEmpty());
     }
 }
